--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "preact": "^8.2.6",
     "preact-compat": "^3.17.0",
     "preact-router": "^2.6.1",
+    "request-idle-callback": "^1.0.2",
     "vh-check": "^2.0.5"
   },
   "jest": {
