--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "preact-compat": "^3.17.0",
     "preact-router": "^2.6.1",
     "request-idle-callback": "^1.0.2",
-    "vh-check": "^2.0.5"
+    "vh-check": "^2.0.5",
+    "what-input": "^5.1.3"
   },
   "jest": {
     "verbose": true,
