--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "preact": "^8.2.6",
     "preact-compat": "^3.17.0",
     "preact-router": "^2.6.1",
+    "serve": "^10.1.1",
     "vh-check": "^2.0.5",
     "what-input": "^5.1.3"
   },
