--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "serve": "preact build --template src/template.html && preact serve",
     "dev": "preact watch --template src/template.html",
     "lint": "eslint src",
-    "test": "jest"
+    "test": "jest",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": "eslint-config-synacor"
