--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "preact watch --template src/template.html",
     "lint": "eslint src",
     "test": "jest",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm install --only=dev && npm install && npm run build"
   },
   "eslintConfig": {
     "extends": "eslint-config-synacor"
