--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "los-angeles-ends2",
+  "name": "los-angeles-ends",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
