Make all links open in new tabs

--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "file-loader": "^2.0.0",
     "intersection-observer": "^0.5.1",
     "markdown-it": "^8.4.2",
+    "markdown-it-for-inline": "^0.1.1",
     "preact": "^8.2.6",
+    "preact-cli": "^2.1.0",
     "preact-compat": "^3.17.0",
     "preact-router": "^2.6.1",
     "serve": "^10.1.1",
