--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "los-angeles-ends2",
-  "short_name": "los-angeles-ends2",
+  "name": "Los Angeles Ends",
+  "short_name": "Los Angeles Ends",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
