--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "preact-router": "^2.6.1",
     "serve": "^10.1.1",
     "vh-check": "^2.0.5",
-    "what-input": "^5.1.3"
+    "what-input": "^5.1.3",
+    "whatwg-fetch": "^3.0.0"
   },
   "jest": {
     "verbose": true,
