--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "markdown-it-for-inline": "^0.1.1",
     "preact": "^8.2.6",
     "preact-cli": "^2.1.0",
+    "preact-cli-plugin-async": "^2.0.0",
     "preact-compat": "^3.17.0",
     "preact-router": "^2.6.1",
     "serve": "^10.1.1",
