--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "emotion": "^9.2.12",
     "file-loader": "^2.0.0",
     "intersection-observer": "^0.5.1",
+    "lodash": "^4.17.11",
     "markdown-it": "^8.4.2",
     "markdown-it-for-inline": "^0.1.1",
     "preact": "^8.2.6",
